# server-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.understand-anything/: knowledge-graph.json  meta.json
alembic/: env.py
alembic/versions/: 20260309_0001_initial_schema.py  20260321_0001_initial_schema.py
app/: main.py
app/api/: deps.py  docs.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  items.py  users.py
app/core/: config.py  context.py  database.py  limiter.py  logging.py  redis.py  security.py  transaction.py
app/crud/: __init__.py  base.py  item.py  user.py
app/middleware/: _types.py  error_handler.py  logging.py  request_id.py  security.py
app/models/: __init__.py  base.py  item.py  user.py
app/modules/auth/: __init__.py  schemas.py  service.py
app/modules/items/: __init__.py  deps.py  models.py  repository.py  schemas.py  service.py
app/modules/users/: __init__.py  deps.py  models.py  repository.py  schemas.py  service.py
app/repositories/: __init__.py  base.py
app/schemas/: __init__.py  auth.py  common.py  item.py  user.py
app/services/: __init__.py  auth_service.py  item_service.py  user_service.py
app/utils/: exceptions.py
docs/: ARCHITECTURE.md  CODE_REVIEW.md
scripts/: bootstrap_db.py  entrypoint.sh  init_db.py
tests/: conftest.py
tests/api/v1/: test_auth.py  test_health.py  test_items.py  test_users.py
tests/crud/: test_user_crud.py
tests/repositories/: test_user_repository.py
tests/services/: test_user_service.py
