[project]
name = "fastapi-backend"
version = "1.0.0"
description = "Production-ready FastAPI backend with layered architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "PyJWT[crypto]>=2.9.0",
    "bcrypt>=5.0.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0.7",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "testcontainers[postgres]>=4.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "B008",    # FastAPI 的 Query/Depends 作为默认参数是标准模式
    "SIM108",  # 三元表达式不总是更清晰
    "UP046",   # PEP 695 类型参数语法，Pydantic/SQLModel 尚未完全支持
    "UP047",   # PEP 695 类型参数语法，同上
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T20"]
"tests/*" = ["B"]
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = false
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "slowapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.repositories.*", "app.modules.*.repository"]
disable_error_code = ["union-attr", "attr-defined", "call-overload", "assignment"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
