[project]
name = "fastapi-backend"
version = "1.0.0"
description = "Production-ready FastAPI backend with layered architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "PyJWT[crypto]>=2.9.0",
    "bcrypt>=5.0.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0.7",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "testcontainers[postgres]>=4.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# E/F: 语法错误与未定义名称（最高价值）
# I: import 排序（全自动修复，零心智负担）
# B: bugbear 真实反模式（如可变默认参数）
# UP: 自动升级旧式语法（大多数可 --fix 自动处理）
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "B008",  # FastAPI Query/Depends 在默认参数中是标准模式
    "UP046", # PEP 695 泛型语法，Pydantic/SQLModel 尚未支持
    "UP047", # 同上
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]  # 测试中 assert 和部分 bugbear 规则干扰正常测试写法

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
disable_error_code = ["prop-decorator", "call-overload"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["app.api.*"]
disallow_untyped_defs = false
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["app.repositories.*", "app.modules.*.repository"]
disable_error_code = ["union-attr", "attr-defined", "assignment"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
